Avoid page breaks inside tables, try to snap to a decent place on the page after adding something

--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,11 @@ table.reportSection input {
     padding: 0;
 }
 
+table {
+    page-break-inside: avoid;
+    page-break-after: auto;
+}
+
 div.formPopup {
     position: fixed;
     left: 20%;
